[project]
name = "praticas09"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme Soares May Rios",email = "136922444+guilhermerios21@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

